[package]
authors = ["tracyspacy"]
name = "pimoroni_gfx_pack_button"
description = "Driver for LCD GFX PACK buttons by Pimoroni"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tracyspacy/pimoroni_gfx_pack_button"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { package = "embedded-hal", version = "1.0" }
[profile.release]
debug = 2
